--- a/Assignment2/sg22_assignment_2.ipynb
+++ b/Assignment2/sg22_assignment_2.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPRpHkCyg0xAu9YHKr5D5qe",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/gpanagioto/projects_socialgraphs22/blob/main/sg22_assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -82,6 +94,7 @@
         "!pip install wordcloud\n",
         "from io import BytesIO\n",
         "import requests\n",
+        "from scipy import stats as st\n",
         "from wordcloud import WordCloud, STOPWORDS\n",
         "from nltk import *\n",
         "import pprint\n",
@@ -101,7 +114,7 @@
       "metadata": {
         "id": "1i0MibzBd5tA"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -173,13 +186,7 @@
         "* Write a short paragraph describing the network. The paragraph should contain the following information\n",
         "\n",
         "  * The number of nodes and links.\n",
-        "  * The average, median, mode, minimum and maximum value of the network's in-degree.s And of the out-degrees.\n",
-        "\n",
-        "* We also want the degree distributions and a plot of the network\n",
-        "\n",
-        "  * Create in- and out-going degree distributions as described in Lecture 5.\n",
-        "  * Estimate the slope of the incoming degree distribtion as described in Lecture 5.\n",
-        "  * Plot the network using the Force Atlas algorithm as described in Lecture 5.\n"
+        "  * The average, median, mode, minimum and maximum value of the network's in-degree.s And of the out-degrees."
       ],
       "metadata": {
         "id": "PuSNOpI_diyS"
@@ -188,28 +195,133 @@
     {
       "cell_type": "code",
       "source": [
-        "type(G)"
+        "def Measures(Graph, TypeOfDegree, Data):\n",
+        "\n",
+        "  if TypeOfDegree == 'In':\n",
+        "    values = list(dict(Graph.in_degree(Data)).values())\n",
+        "  else:\n",
+        "    values = list(dict(Graph.out_degree(Data)).values())\n",
+        "  \n",
+        "  mean = np.mean(values)\n",
+        "  print(\"The average value is {}.\".format(mean))\n",
+        "  median = np.median(values)\n",
+        "  print(\"\\nThe median is {}.\".format(median))\n",
+        "  mode = st.mode(values)\n",
+        "  print(\"\\nThe mode is {}.\".format(list(mode)[0][0]))\n",
+        "  min = np.min(values)\n",
+        "  print(\"\\nThe min is {}.\".format(min))\n",
+        "  max = np.max(values)\n",
+        "  print(\"\\nThe max is {}.\".format(max))\n",
+        "\n",
+        "  return mean, median, list(mode)[0][0], min, max  "
+      ],
+      "metadata": {
+        "id": "BvfAYJQWmroB"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('The number of nodes of the network are {}. The number of edges of the network are {}.'.format(G.number_of_nodes(),G.number_of_edges()))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "yCvVNDBKUu6V",
-        "outputId": "393f2ddc-9f72-4038-c63f-169a467abc03"
+        "id": "e-CsKgCckVeN",
+        "outputId": "e2edff59-0164-44c9-f18b-86fcdffde410"
       },
-      "execution_count": 11,
+      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "networkx.classes.digraph.DiGraph"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number of nodes of the network are 2538. The number of edges of the network are 29998.\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Data = list(G.nodes())\n",
+        "TypeOfDegree = 'In'\n",
+        "average, median, mode, min, max = Measures(G, TypeOfDegree, Data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1iMn5EholxyM",
+        "outputId": "4c28d26d-d58b-400b-a801-53e8fbf5489c"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The average value is 11.819542947202521.\n",
+            "\n",
+            "The median is 4.0.\n",
+            "\n",
+            "The mode is 1.\n",
+            "\n",
+            "The min is 0.\n",
+            "\n",
+            "The max is 448.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Data = list(G.nodes())\n",
+        "TypeOfDegree = 'Out'\n",
+        "average, median, mode, min, max = Measures(G, TypeOfDegree, Data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0QieKDEDmOnJ",
+        "outputId": "8552c34f-af68-4567-ab4b-5780d0f625e6"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The average value is 11.819542947202521.\n",
+            "\n",
+            "The median is 7.0.\n",
+            "\n",
+            "The mode is 0.\n",
+            "\n",
+            "The min is 0.\n",
+            "\n",
+            "The max is 112.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* We also want the degree distributions and a plot of the network\n",
+        "\n",
+        "  * Create in- and out-going degree distributions as described in Lecture 5.\n",
+        "  * Estimate the slope of the incoming degree distribtion as described in Lecture 5.\n",
+        "  * Plot the network using the Force Atlas algorithm as described in Lecture 5.\n"
+      ],
+      "metadata": {
+        "id": "qQwRiL-WkTti"
+      }
     },
     {
       "cell_type": "code",
