Added text regarding the loading and location of our data

--- a/Assignment2/sg22_assignment_2_ima.ipynb
+++ b/Assignment2/sg22_assignment_2_ima.ipynb
@@ -80,31 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "1i0MibzBd5tA"
    },
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "!pip install wordcloud\n",
     "from io import BytesIO\n",
     "import requests\n",
-    "from scipy import stats as st\n",
-    "from wordcloud import WordCloud, STOPWORDS\n",
-    "import nltk\n",
-    "from nltk import word_tokenize\n",
-    "#nltk.download('punkt')\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "import string\n",
     "import re\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import networkx as nx\n",
     "import pickle\n",
     "import numpy as np\n",
-    "import community.community_louvain as community_louvain"
+    "from tqdm.notebook import tqdm\n",
+    "import networkx as nx"
    ]
   },
   {
@@ -113,30 +105,8 @@
     "id": "myMo0iTa-xtC"
    },
    "source": [
-    "Our work has been made easier by the provision of the names and wikilinks of the characters for both the DC and Marvel Universes. This data is stored as `.csv` files at the github page of the course for the [Marvel](https://github.com/SocialComplexityLab/socialgraphs2022/blob/main/files/marvel.csv) and [DC](https://github.com/SocialComplexityLab/socialgraphs2022/blob/main/files/dc.csv) universes. We have created the text files and uploaded them to a [public github repository](https://github.com/gpanagioto/projects_socialgraphs22/tree/main/Assignment2/Txt_files). However, they can be generated locally using the functions and code in the following cells. We directly import them from a database as `pandas` DataFrames.  \n",
-    "\n",
-    "To do this, the variable `GENERATE_TEXT_FILES` of the following cell should be set to `True`:"
+    "Our work has been made easier by the provision of the names and wikilinks of the characters for both the DC and Marvel Universes. This data is stored as `.csv` files at the github page of the course for the [Marvel](https://github.com/SocialComplexityLab/socialgraphs2022/blob/main/files/marvel.csv) and [DC](https://github.com/SocialComplexityLab/socialgraphs2022/blob/main/files/dc.csv) universes. We have created the text files and uploaded them to a [public github repository](https://github.com/gpanagioto/projects_socialgraphs22/tree/main/Assignment2/Txt_files)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "CwdmIiw2-w6e"
-   },
-   "outputs": [],
-   "source": [
-    "GENERATE_TEXT_FILES = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "uQL7TZws9wN6"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -149,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "iWKn5jlGd_Sz"
    },
@@ -157,9 +127,6 @@
    "source": [
     "# Defining function for importing data from the cloud DB. The function returns two dataframes, one for each universe with two columns character_name, wiki_text\n",
     "def DataImport(table_name):\n",
-    "    '''\n",
-    "    \n",
-    "    '''\n",
     "  host=\"ec2-54-75-184-144.eu-west-1.compute.amazonaws.com\"\n",
     "  port=\"5432\" \n",
     "  dbname=\"dab1kopm5t3l06\"\n",
@@ -179,8 +146,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The network has been saved as a `.gpickle` file and is available from the [repository](https://github.com/gpanagioto/projects_socialgraphs22/blob/main/Assignment2/SuperHeroesGraph.gpickle). In the following cell, this file is loaded and the DiGraph `G` contains the information for the superheroes network."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "JXLtoj0meIne"
    },
@@ -192,6 +166,34 @@
     "G = pickle.load(mfile)\n",
     "\n",
     "#G_dir = pickle.load(open('/content/drive/MyDrive/DTU/02805 Social graphs and interactions/SuperHeroesGraph.gpickle', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, the edge list for the generated network, prior to removing any nodes, has been stored in `.txt` format in the [same public repository]()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nx' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp2\\ipykernel_10632\\1409972354.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_edg\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'nx' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "nx.write_edgelist(G)"
    ]
   },
   {
