added formatting changes

--- a/Assignment2/sg22_assignment_2_ima.ipynb
+++ b/Assignment2/sg22_assignment_2_ima.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {
     "id": "1i0MibzBd5tA"
    },
@@ -96,7 +96,8 @@
     "import pickle\n",
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
-    "import networkx as nx"
+    "import networkx as nx\n",
+    "import scipy.stats as st"
    ]
   },
   {
@@ -191,67 +192,80 @@
     "id": "PuSNOpI_diyS"
    },
    "source": [
-    "* Write a short paragraph describing the network. The paragraph should contain the following information\n",
-    "\n",
-    "  * The number of nodes and links.\n",
-    "  * The average, median, mode, minimum and maximum value of the network's in-degree.s And of the out-degrees."
+    "> * Write a short paragraph describing the network. The paragraph should contain the following information\n",
+    ">   * The number of nodes and links.\n",
+    ">   * The average, median, mode, minimum and maximum value of the network's in-degree.s And of the out-degrees."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "BvfAYJQWmroB"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def Measures(Graph, TypeOfDegree, Data):\n",
-    "\n",
-    "  if TypeOfDegree == 'In':\n",
-    "    values = list(dict(Graph.in_degree(Data)).values())\n",
-    "  else:\n",
-    "    values = list(dict(Graph.out_degree(Data)).values())\n",
-    "  \n",
-    "  mean = np.mean(values)\n",
-    "  print(\"The average value is {}.\".format(mean))\n",
-    "  median = np.median(values)\n",
-    "  print(\"\\nThe median is {}.\".format(median))\n",
-    "  mode = st.mode(values)\n",
-    "  print(\"\\nThe mode is {}.\".format(list(mode)[0][0]))\n",
-    "  min = np.min(values)\n",
-    "  print(\"\\nThe min is {}.\".format(min))\n",
-    "  max = np.max(values)\n",
-    "  print(\"\\nThe max is {}.\".format(max))\n",
-    "\n",
-    "  return mean, median, list(mode)[0][0], min, max  "
+    "__Answer__:  \n",
+    "The network that has been created from the Wikipages of each character, for both universes is stored in the graph `G`. It consists of $2538$ nodes and $29998$ edges, as shown in the following cell:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "e-CsKgCckVeN",
-    "outputId": "e2edff59-0164-44c9-f18b-86fcdffde410"
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of nodes of the network are 2538. The number of edges of the network are 29998.\n"
+      "The number of nodes of the network are 2538.\n",
+      "The number of edges of the network are 29998.\n"
      ]
     }
    ],
    "source": [
-    "print('The number of nodes of the network are {}. The number of edges of the network are {}.'.format(G.number_of_nodes(),G.number_of_edges()))"
+    "print('The number of nodes of the network are {}.\\nThe number of edges of the network are {}.'.format(G.number_of_nodes(),G.number_of_edges()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a directed graph, since each edge has been creating pointing from the node that has a link on its wikipage towards the character that is linked. As a result, the in- and out- degrees are distinguished.  \n",
+    "In order to retrieve basic statistics for the network, the following function has been defined:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
+   "metadata": {
+    "id": "BvfAYJQWmroB"
+   },
+   "outputs": [],
+   "source": [
+    "def Measures(Graph, TypeOfDegree, Data):    \n",
+    "    degree_type = 'Out-'\n",
+    "    if TypeOfDegree == 'In':\n",
+    "        values = list(dict(Graph.in_degree(Data)).values())\n",
+    "        degree_type = 'In-'\n",
+    "    else:\n",
+    "        values = list(dict(Graph.out_degree(Data)).values())\n",
+    "    \n",
+    "    print(f\"{degree_type} degree statistics:\\n\")\n",
+    "    \n",
+    "    mean_ = np.mean(values)\n",
+    "    print(\"The average degree value is {}.\".format(np.round(mean_,3)))\n",
+    "    median_ = np.median(values)\n",
+    "    print(\"The median is {}.\".format(median_))\n",
+    "    mode_ = st.mode(values, keepdims=True)\n",
+    "    print(\"The mode is {}.\".format(list(mode_)[0][0]))\n",
+    "    min_ = np.min(values)\n",
+    "    print(\"The minimum value is {}.\".format(min_))\n",
+    "    max_ = np.max(values)\n",
+    "    print(\"The maximum value is {}.\".format(max_))\n",
+    "\n",
+    "    return mean_, median_, list(mode_)[0][0], min_, max_  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -264,15 +278,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average value is 11.819542947202521.\n",
+      "In- degree statistics:\n",
       "\n",
+      "The average degree value is 11.82.\n",
       "The median is 4.0.\n",
-      "\n",
       "The mode is 1.\n",
-      "\n",
-      "The min is 0.\n",
-      "\n",
-      "The max is 448.\n"
+      "The minimum value is 0.\n",
+      "The maximum value is 448.\n"
      ]
     }
    ],
@@ -284,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -297,15 +309,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average value is 11.819542947202521.\n",
+      "Out- degree statistics:\n",
       "\n",
+      "The average degree value is 11.82.\n",
       "The median is 7.0.\n",
-      "\n",
       "The mode is 0.\n",
-      "\n",
-      "The min is 0.\n",
-      "\n",
-      "The max is 112.\n"
+      "The minimum value is 0.\n",
+      "The maximum value is 112.\n"
      ]
     }
    ],
