small text additions

--- a/Assignment2/sg22_assignment_2_ima.ipynb
+++ b/Assignment2/sg22_assignment_2_ima.ipynb
@@ -264,6 +264,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the function `Measures`, the following statistics can be calculated for the in- and out- degrees:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {
@@ -291,7 +298,7 @@
    "source": [
     "Data = list(G.nodes())\n",
     "TypeOfDegree = 'In'\n",
-    "average, median, mode, min, max = Measures(G, TypeOfDegree, Data)"
+    "average, median, mode, min_, max_ = Measures(G, TypeOfDegree, Data)"
    ]
   },
   {
@@ -322,7 +329,70 @@
    "source": [
     "Data = list(G.nodes())\n",
     "TypeOfDegree = 'Out'\n",
-    "average, median, mode, min, max = Measures(G, TypeOfDegree, Data)"
+    "average, median, mode, min_, max_ = Measures(G, TypeOfDegree, Data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lookingat the statistics for the in- and out- degrees, it can be seen that while the average value for the degrees is over 10, the mode, especially for the out- degrees is 0. Maybe there are nodes that have no incoming or outgoing connections. The following cell investigates how many components have no incoming and outgoing connections:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 962 nodes with out-degree equal to 0.\n",
+      "There are 132 nodes with in-degree equal to 0.\n",
+      "There are 0 nodes with no incoming or outgoing connection.\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_degrees = np.array([degree for node,degree in G.out_degree()])\n",
+    "in_degrees = np.array([degree for node, degree in G.in_degree()])\n",
+    "\n",
+    "print(f\"There are {len(out_degrees[out_degrees==0])} nodes with out-degree equal to 0.\")\n",
+    "print(f\"There are {len(in_degrees[in_degrees==0])} nodes with in-degree equal to 0.\")\n",
+    "\n",
+    "# Find if there are nodes with no incoming or outgoing edges at all\n",
+    "idx_out_zero = np.where(out_degrees==0)[0] # Nodes with 0 out-degree\n",
+    "in_degrees_at_zero_out = in_degrees[idx_out_zero] # In-degrees of nodes with 0 out-degrees\n",
+    "print(f\"There are {len(in_degrees_at_zero_out[in_degrees_at_zero_out==0])} nodes with no incoming or outgoing connection.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, a network this large can create some difficulties with visualisation. As in [Exercise 1, Week 5](https://github.com/SocialComplexityLab/socialgraphs2022/blob/main/lectures/Week5.ipynb), the largest weakly connected component is extracted. To this end, `networkx`'s function [`weakly_connected_components`](https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.components.weakly_connected_components.html#networkx.algorithms.components.weakly_connected_components) is used:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.int32' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp2\\ipykernel_10632\\1099006670.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlargest_cc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mweakly_connected_components\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'numpy.int32' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "largest_cc = max(nx.weakly_connected_components(G), key=len)"
    ]
   },
   {
