added communities text

--- a/Assignment2/sg22_assignment_2_ima.ipynb
+++ b/Assignment2/sg22_assignment_2_ima.ipynb
@@ -820,8 +820,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Quoting [Chapter 9, Network Science](http://networksciencebook.com/chapter/9#basics), a community is a locally dense subgraph in a network.  \n",
+    "\n",
+    "In this section, we find for each universe the largest communities, using the Louvain algorithm [1](https://en.wikipedia.org/wiki/Louvain_method), [2](https://sites.google.com/site/findcommunities/). This is achieved by importing the library [`python-louvain`](https://perso.crans.org/aynaud/communities/), is imported as `community`. The communities are subsequently visualized and basic information regarding their size and their [modularity](http://networksciencebook.com/chapter/9#modularity) as quality metric is presented.  \n",
+    "\n",
+    "Finally, for the 10 largest  communities, their text is processed and a TF-IDF vector for each community is created. A wordcloud visualization is then shown for the processed text of each community."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "__Question__:  \n",
-    "> Identify the communities in one or both of the superhero universes (DC/Marvel) as described in Week 7."
+    "> Identify the communities in one or both of the superhero universes (DC/Marvel).   \n",
+    "\n",
+    "> Write a paragraph about your work to identify the communities. The paragraph should include\n",
+    ">   - Information about the algorithm you used to find communities.\n",
+    ">   - The value of modularity for your network.\n",
+    ">   - The number of communities and their sizes (in terms of number of nodes)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Answer__:  \n",
+    "\n",
+    "To recognise the communities for the respective universe, the Louvain method is used. This method is based on the [modularity](http://networksciencebook.com/chapter/9#modularity) metric, which is presented first.  \n",
+    "\n",
+    "_Modularity_  \n",
+    "Considering a network with $N$ nodes and $L$ edges and a partition into $n_c$ communities, with each community consisting of $N_{c}$ nodes adn $L_{c}$ edges, $c=1\\dots n_c$. In order to assess whether the community structure of this partition, ie. whether the sungraphs created by this partition are real communities based on local density, the modularity metric is used. It is calculated as:\n",
+    "$$\n",
+    "M=\\sum_{c=1}^{n_c} \\left( \\frac{L_{c}}{L} - \\left( \\frac{k_c}{2L} \\right)^{2} \\right)\n",
+    "$$  \n",
+    "where $k_c$ is the total degree of the nodes in community $c$.\n",
+    "Modularity can have maximum value of 1 and can also have negative values. The higher the modularity, the better the partition in forming communities. If $M=0$, then the connectivity in the subgraphs is random, while if $M<0$, then the nodes in the subgraphs do not form communities.  \n",
+    "\n",
+    "_Louvain algorithm_  \n"
    ]
   },
   {
