added communities text

--- a/Assignment2/sg22_assignment_2_ima.ipynb
+++ b/Assignment2/sg22_assignment_2_ima.ipynb
@@ -856,7 +856,10 @@
     "where $k_c$ is the total degree of the nodes in community $c$.\n",
     "Modularity can have maximum value of 1 and can also have negative values. The higher the modularity, the better the partition in forming communities. If $M=0$, then the connectivity in the subgraphs is random, while if $M<0$, then the nodes in the subgraphs do not form communities.  \n",
     "\n",
-    "_Louvain algorithm_  \n"
+    "_Louvain algorithm_  \n",
+    "The Louvain algorithm is used to find partitions that potentially form communities in a network. This an unsupervised algorithm, based on maximizing the modularity of the partitions it generates. It is a greedy method with time complexity $\\mathcal{O}(n\\cdot logn)$. The algorithm has two phases:  \n",
+    "  -  _Phase 1_: Initially each node is assigned to a community of its own. The modularity is computed for this partition. Then a node $i$ is removed from its community and moved to the community of a neighboring node $j$. The change in modularity is computed. This happens for all nodes $i$ and each of its (connected to $i$) $j$ neighbors. The change of node $i$ to the community of $j$ taht is kept is the one that maximizes the increase in modularity. If the change in modularity is negative or zero, node $i$ remains in its starting community.  \n",
+    "  - _Phase 2_: Afterwards, all the nodes in each community are grouped. A network is built where each node represents a community from Phase 1. All internal connections of each community-node of the new network is represented by self loops. After cerating this netowork, Phase 1 is repeated on it."
    ]
   },
   {
