added communities code

--- a/Assignment2/sg22_assignment_2_ima.ipynb
+++ b/Assignment2/sg22_assignment_2_ima.ipynb
@@ -863,6 +863,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Identifying communities in the DC universe  \n",
+    "First the required library `python-louvain` is imported"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: python-louvain in c:\\users\\user\\anaconda3\\lib\\site-packages (0.15)\n",
+      "Requirement already satisfied: networkx in c:\\users\\user\\anaconda3\\lib\\site-packages (from python-louvain) (2.8.7)\n",
+      "Requirement already satisfied: numpy in c:\\users\\user\\anaconda3\\lib\\site-packages (from python-louvain) (1.23.1)\n",
+      "0.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install python-louvain\n",
+    "import community\n",
+    "\n",
+    "print(community.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Afterwards, the network that contains characters from the DC universe is generated as a subgraph of the directed network of all superheroes. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of DC characters\n",
+    "dc_characters = [node[0] for node in G.nodes(data=True) if node[1]['universe'].lower()=='dc']\n",
+    "\n",
+    "# Create a directed subgraph of the DC characters\n",
+    "G_dc = G.subgraph(dc_characters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, the Louvain algorithm is applied on the DC characters subgraph, after it has been transformed to an undirected graph (as per [Week 7](https://github.com/SocialComplexityLab/socialgraphs2022/blob/main/lectures/Week7.ipynb)) and the [documentation](https://perso.crans.org/aynaud/communities/api.html#community.best_partition). The function `best_partition` is used to identify the partition with maximal modularity. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 24 different communities for the DC network.\n",
+      "The modularity for the best partition of the DC subgraph is: 0.295\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute the best partition\n",
+    "partition_dc = community.best_partition(G_dc.to_undirected())\n",
+    "\n",
+    "# Number of communities found in the dc network\n",
+    "nc_dc = len(set(list(partition_dc.values())))\n",
+    "print(f\"Found {nc_dc} different communities for the DC network.\")\n",
+    "\n",
+    "# Find the modularity of the best partition found in the subgraph.\n",
+    "modularity_best_dc = community.modularity(partition_dc, G_dc.to_undirected())\n",
+    "print(f\"The modularity for the best partition of the DC subgraph is: {np.round(modularity_best_dc,3)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The louvain algorithm introduces some randomness and, as a result, the partitions are not always bound to be identical every time the algorithm is executed. At the time of running and writing the report 24 communities were found for the DC universe, with partition modularity $\\sim 0.295$. Since the modularity is $>0$, then the communities created by this partition matches two distinct communites. These characters could potentially form a real community in the comics series."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The number of nodes for the mebers of each community can be calculated from the code in the following cell:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
