added communities code

--- a/Assignment2/sg22_assignment_2_ima.ipynb
+++ b/Assignment2/sg22_assignment_2_ima.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 106,
    "metadata": {
     "id": "1i0MibzBd5tA"
    },
@@ -97,7 +97,8 @@
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
     "import networkx as nx\n",
-    "import scipy.stats as st"
+    "import scipy.stats as st\n",
+    "import copy"
    ]
   },
   {
@@ -1114,8 +1115,82 @@
    "metadata": {},
    "source": [
     "__Answer__:  \n",
-    "The [TF-IDF](https://en.wikipedia.org/wiki/Tf%E2%80%93idf) algorithm is used to "
+    "The [TF-IDF](https://en.wikipedia.org/wiki/Tf%E2%80%93idf) statistic is used to infer how much information a term in a document conveys. It is the product of two terms:  \n",
+    "- The Term frequency (TF): It is the relative frequency of term t within document d.  \n",
+    "  $$\n",
+    "  tf(t,d) = \\frac{f_{t,d}}{\\sum_{t'\\in d}f_{t',d}}\n",
+    "  $$\n",
+    "- The Inverse document frequency (IDF): Factor that diminishes the weight of terms that occur very frequently in the document set and increases the weight of terms that occur rarely.  It is a measure of how much information a word provides and takes into consideration all the documents. It is the logarithm scaled inverse fraction of the documents that contain the word. For a set of $D$ documents:\n",
+    "  $$\n",
+    "  idf(t,D) = log \\frac{N}{|\\{ d \\in D: t \\in d \\}|+1}\n",
+    "  $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It was previously seen that out of the 24 communities in te DC universe, only 10 had more than 1 members. We want to get the top 10 communities in terms of members size. This is performed in the following cell: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "More than 10 communities found. Keeping the 10 largest ones.\n",
+      "Community 1: 115 members.\n",
+      "Community 6: 113 members.\n",
+      "Community 3: 110 members.\n",
+      "Community 2: 100 members.\n",
+      "Community 4: 55 members.\n",
+      "Community 0: 27 members.\n",
+      "Community 8: 18 members.\n",
+      "Community 9: 7 members.\n",
+      "Community 11: 2 members.\n",
+      "Community 15: 2 members.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dictionary that holds the characters that belong to each community. (Aggregates the partitions_dc values())\n",
+    "dc_communities_chars = {i:[char for (char, comm) in partition_dc.items() if comm==i] for i in set(partition_dc.values())}\n",
+    "\n",
+    "# Check if there are more than 10 communities. A good idea might also be to sort them in descending order based\n",
+    "# on the size of the community\n",
+    "dc_communities_chars = dict(sorted(dc_communities_chars.items(), key=lambda x:len(x[1]), reverse=True))\n",
+    "\n",
+    "\n",
+    "if len(dc_communities_chars.keys())>10:\n",
+    "    print('More than 10 communities found. Keeping the 10 largest ones.')\n",
+    "    dc_communities_chars_tmp = {}\n",
+    "    dict_items = dc_communities_chars.items()\n",
+    "    for comm, chars in list(dict_items)[:10]:\n",
+    "        dc_communities_chars_tmp[comm] = chars\n",
+    "    dc_communities_chars = copy.deepcopy(dc_communities_chars_tmp)\n",
+    "    del dc_communities_chars_tmp\n",
+    "    \n",
+    "for comm, chars_list in dc_communities_chars.items():\n",
+    "    print(f\"Community {comm}: {len(chars_list)} members.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the characters for each community in the top 10, we need to process their wikitext. A document consists of the wikitext of each caharacter in a community, integrated in a large string object. These documents can be stored in a dictionary with the keys being the community number. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
